<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_enum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_btn_background"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/font_primary"
        android:text="@string/btn_enum"/>
    <TextView
        android:id="@+id/btn_retrofit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_btn_background"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/font_primary"
        android:text="@string/btn_retrofit"/>

    <TextView
        android:id="@+id/btn_sophix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_btn_background"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/font_primary"
        android:text="@string/btn_sophix"/>

    <TextView
        android:id="@+id/btn_rxbus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_btn_background"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/font_primary"
        android:text="@string/btn_rxbus"/>

    <TextView
        android:id="@+id/btn_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_btn_background"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/font_primary"
        android:text="@string/btn_filter"/>

</LinearLayout>
